--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "start": "^5.1.0"
   }
 }
