--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "helmet": "^3.18.0",
     "http": "0.0.0",
     "mongoose": "^5.6.1",
+    "node-sessionstorage": "^1.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "path": "^0.12.7",
     "serve-static": "^1.14.1",
+    "session-storage": "^1.0.1",
     "start": "^5.1.0"
   }
 }
