--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "postinstall": "bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "assert": "^2.0.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "bower": "^1.8.8",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.2.0",
     "cookie-parser": "^1.4.4",
@@ -20,6 +22,7 @@
     "express-session": "^1.16.2",
     "helmet": "^3.18.0",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "mongoose": "^5.6.1",
     "node-sessionstorage": "^1.0.0",
     "passport": "^0.4.0",
